# CrispCalc

./: .release-notes-v0.3.0.md  .release-notes-v0.4.0.md  HANDOFF.md  HANDOFF_NEXT.md  HANDOFF_PRECISION.md  HISTORY.md  PLAN.md  bundle_symengine.sh  libcas_wrapper.dylib  pubspec.yaml  readme.md
.github/workflows/: build-ios.yml  build-macos.yml  build-web.yml  ci.yml  release.yml
assets/licenses/: SYMENGINE_STACK.txt
integration_test/: app_smoke_test.dart
lib/: diagnostics_runner_io.dart  diagnostics_runner_stub.dart  main.dart
lib/controllers/: latex_controller.dart
lib/engine/: analysis_engine.dart  app_state.dart  calculator_engine.dart  cas_bridge.dart  conic_math.dart  csp_solver.dart  distributions.dart  function_reference.dart  hypothesis_tests.dart  matrix_diagnostics.dart  matrix_evaluator.dart  notepad.dart  notepad_evaluator.dart  numeric_fallback.dart  numerical.dart  plane_math.dart  polynomial.dart  polynomial_mod.dart  statistics_presets.dart  step_diagnostics.dart  step_engine.dart  sudoku.dart  symbolic_web.dart  tensor.dart  unit_catalog.dart  unit_expression.dart  vector_math.dart  worked_examples.dart
lib/engine/scene_3d/: intersections.dart  scene_object.dart  scene_state.dart
lib/localization/: app_localizations.dart
lib/screens/: about_screen.dart  analysis_hub_screen.dart  calculator_screen.dart  conic_section_screen.dart  constraints_screen.dart  curve_analysis_input_screen.dart  curve_analysis_results_screen.dart  function_editor_screen.dart  graphing_3d_screen.dart  graphing_screen.dart  help_screen.dart  matrix_editor_screen.dart  notepad_screen.dart  plane_analysis_screen.dart  scene_3d_screen.dart  statistics_screen.dart  sudoku_screen.dart
lib/services/: engine_service.dart  native_licenses.dart
lib/utils/: error_formatter.dart  exact_integer.dart  expression_preprocessing_utils.dart  keyboard_input_handler.dart  latex_conversion_utils.dart  math_display_utils.dart
lib/widgets/: australia_map_painter.dart  calculator_button.dart  calculator_display.dart  calculator_keypad.dart  export_data_dialog.dart  function_picker_dialogs.dart  function_reference_dialog.dart  help_target.dart  history_help_modal.dart  import_data_dialog.dart  keypad_grid.dart  latex_input_field.dart  memory_dialogs.dart  module_navigation.dart  notepad_manager_dialog.dart  progress_overlay.dart  propagation_visualizer.dart  scene_3d_intersections_panel.dart  scene_3d_object_dialogs.dart  scene_3d_painter.dart  steps_dialog.dart  sudoku_grid.dart  unit_converter_dialog.dart  user_functions_dialog.dart  variable_viewer.dart  web_unsupported_banner.dart  worked_examples_dialog.dart
linux/flutter/: generated_plugins.cmake
macos/: Podfile  copy_native_lib.sh
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift  copy_native_lib.sh
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  cas_wrapper.cpp
test/: analysis_engine_test.dart  app_state_persistence_test.dart  app_state_test.dart  australia_map_painter_test.dart  auto_solve_test.dart  calculator_button_test.dart  calculator_engine_test.dart  conic_math_test.dart  constraints_dsl_help_popover_test.dart  cryptarithm_prefill_test.dart  csp_mus_test.dart  csp_solver_test.dart  csp_trace_test.dart  distributions_test.dart  edge_cases_test.dart  error_formatter_test.dart  exact_integer_test.dart  expression_pipeline_deep_test.dart  expression_preprocessing_utils_test.dart  function_reference_dialog_test.dart  function_reference_localization_test.dart  function_reference_open_module_test.dart  function_reference_test.dart  help_target_test.dart  history_help_modal_test.dart  hypothesis_tests_test.dart  keyboard_input_handler_test.dart  keypad_help_popover_test.dart  latex_controller_test.dart  latex_conversion_utils_test.dart  limit_integrate_test.dart  localizations_test.dart  math_display_utils_test.dart  matrix_diagnostics_test.dart  native_bridge_wiring_test.dart  notepad_evaluator_test.dart  notepad_line_help_test.dart  notepad_persistence_test.dart  notepad_screen_test.dart  numeric_fallback_test.dart  (+27 more)
test/golden/: about_card_golden_test.dart
tool/: web_smoke.mjs
tools/hooks/: pre-commit
web/: index.html  manifest.json  symengine.js  symengine.wasm
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
